# tritonkit

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: run_all.py
benchmarks/results/: REPORT.md
benchmarks/results/vastai/a100_sxm/: attention_nvidia_a100_sxm4_40gb.json  gemm_nvidia_a100_sxm4_40gb.json  quantize_nvidia_a100_sxm4_40gb.json  rmsnorm_nvidia_a100_sxm4_40gb.json  softmax_nvidia_a100_sxm4_40gb.json  swiglu_nvidia_a100_sxm4_40gb.json
benchmarks/results/vastai/h100_sxm/: attention_nvidia_h100_80gb_hbm3.json  gemm_nvidia_h100_80gb_hbm3.json  (+4 more)
benchmarks/suites/: activation.py  attention.py  gemm.py  norm.py  quantize.py  softmax.py
docs/: PHASE3_VASTAI_PLAN.md  PRODUCT_MANUAL.md  PRODUCT_MANUAL_zh.md  TECHNICAL_MANUAL.md  TECHNICAL_MANUAL_zh.md
scripts/: vastai_bench.sh
src/tritonkit/: __init__.py
src/tritonkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tritonkit/bench/: __init__.py  baselines.py  export.py  hardware.py  result.py  roofline.py  runner.py
src/tritonkit/cli/: main.py
src/tritonkit/examples/: __init__.py  flash_attention.py  gemm_fp16.py  int8_gemm.py  rmsnorm_fused.py  swiglu_fused.py  w4a16_gemm.py
src/tritonkit/integrate/: __init__.py  autotune.py  compile.py  torch_op.py
src/tritonkit/primitives/: __init__.py  gemm_utils.py  load_store.py  quantize.py  reduction.py  softmax.py  stats.py
src/tritonkit/testing/: __init__.py  correctness.py  hardware.py  numerical.py  shapes.py
tests/: conftest.py  test_examples.py  test_flash_attention.py  test_testing.py
(+30 files in other folders)
